# chat_split

./: .gitignore  Delivery_Summary.md  FINAL_SUMMARY.md  PLAN.md  README.md  USAGE.md  debug_threshold.py  pyproject.toml  test_app.py  test_new_adapter.py
chatExport/: test_conversation.json
sample_data/: sample_result.json
src/: __init__.py  __main__.py  ingestor.py  models.py  persist.py  segmenter.py
src/adapters/: __init__.py  base.py  chat_export.py  telegram_json.py
src/msg_split.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_ingestor.py  test_models.py  test_segmenter.py
