[project]
name = "chat_split"
version = "0.1.0"
description = "Telegram conversation log splitter"
authors = [
    {name = "Assistant", email = "assistant@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest>=7.0.0",
]

[project.scripts]
chat_split = "src.__main__:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"